# EMO

./: .gitignore  LICENSE  README.md  icon.key  package-lock.json  package.json
.github/workflows/: main.yml
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/python/: meaning_eval.py  requirements.txt
src-tauri/src/: commands.rs  db.rs  helpers.rs  lib.rs  main.rs  models.rs
