[package]
name = "EMO"
version = "0.1.0"
description = "5-Box EMO Flashcard System"
authors = ["you"]
edition = "2021"

[lib]
name = "EMO_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "EMO"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs-next = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
